# share/api/swagger.yaml
@@ -39,14 +39,37 @@ paths:
 
   /tranfers:
     get:
-      summary: Generate greeting
-      description: Generates a greeting message.
+      summary: Get all tranfers list
       operationId: billing.api.views.TransferHandler.list
       responses:
         200:
-          description: greeting response
-          examples:
-            "text/plain": "Hello John"
+          description: Gets transfers list
+    post:
+      summary: Create a new transfer order
+      operationId: billing.api.views.TransferHandler.post
+      parameters:
+        - name: transfer
+          in: body
+          schema:
+            $ref: '#/definitions/Transfer'
+      responses:
+        201:
+          description: Transfer order created successfully
+          schema:
+            $ref: '#/definitions/Transfer'
+
+
+  /tranfers/{uuid}:
+    get:
+      summary: Get tranfer by uuid
+      operationId: billing.api.views.TransferHandler.get
+      parameters:
+        - $ref: '#/parameters/uuid'
+      responses:
+        200:
+          description: Gets transfers list
+        404:
+          description: Transfer does not exist
 
   /clients:
     get:
@@ -54,8 +77,7 @@ paths:
       operationId: billing.api.views.ClientsHandler.list
       responses:
         200:
-          description: Gets client by id
-
+          description: Gets clients list
     post:
       summary: Get client summary info
       operationId: billing.api.views.ClientsHandler.post
@@ -72,7 +94,7 @@ paths:
 
   /clients/{uuid}:
     get:
-      summary: Get client summary info
+      summary: Get client by uuid
       operationId: billing.api.views.ClientsHandler.get
       parameters:
         - $ref: '#/parameters/uuid'
@@ -128,6 +150,37 @@ definitions:
         description: Client's city
         example: "Moscow"
         minLength: 1
+      created_at:
+        type: string
+        format: date-time
+        description: Creation time
+        example: "2015-07-07T15:49:51.230+02:00"
+        readOnly: true
+
+  Transfer:
+    type: object
+    required:
+      - amount
+      - source_id
+      - destination_id
+    properties:
+      uuid:
+        type: string
+        description: A unique identifier
+        example: "5e45f735-5de4-49ed-89d4-a79d7589a096"
+        readOnly: true
+      amount:
+        type: string
+        example: "1.00"
+        description: A transfer amount
+      source_id:
+        type: string
+        description: A unique identifier
+        example: "41cdc6d4-7bc2-46e4-a4d6-703b81648a40"
+      destination_id:
+        type: string
+        description: A unique identifier
+        example: "70f8b112-f906-42c1-ae53-8e40a0129cb5"
       created_at:
         type: string
         format: date-time
